--- a/style.css
+++ b/style.css
@@ -2,3 +2,7 @@ h1{
     color: rgb(184, 172, 157);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+p{
+    background-color: bisque;
+    
+}
