adding new h2 tag and change some colors

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 h1{
-    color: rgb(184, 172, 157);
+    color: rgb(252, 138, 0);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 p{
-    background-color: bisque;
+    background-color: rgb(0, 255, 13);
     
 }
